# the_code

./: .gitignore  .project  CMakeLists.txt  README.md  SIM.sh  bt-serial  build.sh  check.sh  check_stack.sh  cube  minicom
.github/workflows/: build.yml  check-format.yml  test.yml
cmake/: stm32_toolchain.cmake
falcon/: .cproject  .mxproject  .project  STM32L4S5VITX_FLASH.ld  falcon Debug.launch  falcon Release.launch  falcon.ioc
falcon/Core/Inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
falcon/Core/Inc/eaglesteward/: DeadOpponent.hpp  behavior.hpp  behaviortree.hpp  constants.hpp  dead_opponent.hpp  game_entities.hpp  motor.hpp  opponent_tracker.hpp  potential_field.hpp  rolling_history.hpp  state.hpp  tof.hpp  world.hpp
falcon/Core/Inc/eaglesteward/guidance/: behavior.hpp  cc_root.hpp  thibault.hpp
falcon/Core/Inc/iot01A/: encoder.h  input.h  led.h  output.h  sensors.h  timer.h  top.h  top_driver.h  um7.hpp
falcon/Core/Inc/robotic/: angle.hpp  bluetooth.hpp  carre.hpp  constants.hpp  controller_stanley.hpp  controllers.hpp  eagle_packet.hpp  fusion_odo_imu.hpp  inertial.hpp  robot_constants.hpp
falcon/Core/Inc/utils/: angles.hpp  bounded_pqueue.hpp  constants.hpp  debug.hpp  game_entities.hpp  sized_array.hpp
falcon/Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  syscalls.c
falcon/Core/Src/eaglesteward/: DeadOpponent.cpp  behavior.cpp  behaviortree.cpp  command.cpp  dead_opponent.cpp  game_entities.cpp  motor.cpp  opponent_tracker.cpp  potential_field.cpp  rolling_history.cpp  state.cpp  tof.cpp  top_driver.cpp  world.cpp
falcon/Core/Src/eaglesteward/guidance/: behavior.cpp  cc_root.cpp  nicolas.cpp  thibault.cpp
falcon/Core/Src/iot01A/: async_uart.cpp  encoder.c  input.cpp  led.c  output.cpp  pwm.c  sensors.c  timer.c  top.cpp
falcon/Core/Src/robotic/: angle.cpp  carre.cpp  command.cpp  controller_stanley.cpp  controllers.cpp  eagle_packet.cpp  fusion_odo_imu.cpp  inertial.cpp
falcon/Core/Src/utils/: angles.cpp  debug.cpp  game_entities.cpp
helloworld2/: .cproject  .mxproject  .project  helloworld2 Debug.launch  helloworld2 Release.launch  helloworld2.ioc
helloworld2/Core/Inc/: carre.h  encoder.h  inertial.h  input.h  main.h  map  motor.h  nicolas.h  output.h  pid.h  pwm.h  stm32l4xx_it.h  thibault.hpp  top.h
helloworld2/Core/Inc/eaglesteward/: autopilot.hpp  behaviortree.h  behaviortree.hpp  cc_retour.hpp  constante.h  motor.hpp  nicolas.h  pelle.h  pelle.hpp  robot_constants.hpp  shortest_path.hpp  state.h  state.hpp  thibault.hpp  tof.hpp  world.hpp
helloworld2/Core/Inc/eaglesteward/guidance/: cc_root.hpp  nicolas.hpp  thibault.hpp
helloworld2/Core/Inc/iot01A/: behaviortree.h  bluetooth.hpp  config.h  encoder.h  input.h  led.h  output.h  pwm.h  sensors.h  top.h  top_driver.h
helloworld2/Core/Inc/robotic/: angle.h  bluetooth.hpp  carre.h  command.hpp  constants.h  controller_stanley.h  controller_stanley.hpp  eagle_packet.hpp  fusion_odo_imu.h  inertial.h  myprintf.h  pid.h  pid.hpp  projection.h  um7.h  um7.hpp
helloworld2/Core/Inc/utils/: constants.h  constants.hpp  debug.h  debug.hpp  game_entities.hpp  myprintf.h  myprintf.hpp  sized_array.hpp
helloworld2/Core/Src/: carre.c  encoder.c  intertial.c  led.c  main.c  motor.c  output.c  pid.c  pwm.c  sensors.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  syscalls.c  top.c
helloworld2/Core/Src/eaglesteward/: README.md  autopilot.cpp  behaviortree.c  behaviortree.cpp  cc_retour.cpp  cc_root.cpp  falcon.c  motor.cpp  nicolas.c  pelle.c  pelle.cpp  shortest_path.cpp  state.c  state.cpp  thibault.c  thibault.cpp  tof.cpp  top.c  top_driver.c  top_driver.cpp  world.cpp
helloworld2/Core/Src/eaglesteward/guidance/: behavior.cpp  cc_root.cpp  nicolas.c  nicolas.cpp  thibault.cpp
helloworld2/Core/Src/iot01A/: async_uart.c  behaviortree.c  encoder.c  input.c  led.c  motor.c  output.c  pwm.c  sensors.c  state.c  top.c  um7.cpp
helloworld2/Core/Src/robotic/: angle.c  bluetooth.cpp  carre.c  carre.cpp  command.cpp  controller_stanley.c  controller_stanley.cpp  eagle_packet.cpp  fusion_odo_imu.c  fusion_odo_imu.cpp  inertial.c  inertial.cpp  intertial.c  pid.c  pid.cpp  projection.c  um7.c  um7.cpp
helloworld2/Core/Src/utils/: bluetooth_reader.cpp  debug.c  debug.cpp  game_entities.c  game_entities.cpp
host-tools/: CMakeLists.txt  README.md  overrides.cpp  simulator-connector.cpp  thibault_debug.cpp
projet666/code/: .mxproject  code.ioc
projet666/code/Core/Inc/: main.h  stm32h5xx_hal_conf.h
projet666/code/Core/Src/: main.c  stm32h5xx_hal_msp.c
projet666/code/EWARM/: Project.eww  code.ewd  code.ewp
projet666/easyeda/: projet666.eprj
server_ia/: CMakeLists.txt  http_server  http_server.c
simulator-connector/: README.md  simulator-connector.c
tests/: CMakeLists.txt  test_bluetooth.cpp  test_eagle_packet.cpp  test_world.cpp
